feat: 补充参与者在线状态管理和备份机制
**新增内容**：

**需求规格说明书**：
- 新增参与者在线状态管理章节（第五章）
  - 在线状态定义（🟢在线/🟡忙碌/🔴离线）
  - 状态切换规则和触发条件
  - 在线状态显示（发起人可见）
  - 活跃追踪机制

- 新增备份机制章节（第六章）
  - 备用参与者机制
  - 指定备用参与者配置
  - 任务放弃流程
  - 放弃惩罚规则

**场景设计文档**：
- 新增场景五：参与者在线状态管理
  - 参与者标记在线状态
  - 发起人查看参与者状态
   指定备用参与者

- 新增场景七：备份接管与任务转移
  - 参与者放弃任务
  - 发起人处理放弃
  - 备用参与者接管

- 更新场景编号：1-8个场景
- 删除重复内容

**核心设计**：
- 参与者主动维护在线状态
- 发起人可查看状态并指定备用
- 放弃任务需确认，影响信誉分
- 备用参与者可接管任务

--- a/scenarios/场景设计文档_v0.5.md
+++ b/scenarios/场景设计文档_v0.5.md
@@ -339,7 +339,102 @@
 
 ---
 
-## 场景五：项目加密与密钥管理
+## 场景五：参与者在线状态管理
+
+### 场景描述
+参与者主动维护自己的在线状态，发起人可查看参与者状态并指定备用参与者。
+
+### 流程
+
+```
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 1：参与者标记在线状态                                              │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 参与者状态切换：                                                        │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 当前状态：[🟢 在线 ▼]                                               │   │
+│ │                                                                    │   │
+│ │ 状态选项：                                                         │   │
+│ │ ├─ 🟢 在线 - 可接新任务                                          │   │
+│ │ ├─ 🟡 忙碌 - 正在执行任务                                        │   │
+│ │ └─ 🔴 离线 - 暂时不接任务                                       │   │
+│ │                                                                    │   │
+│ │ 最近活跃：刚刚                                                    │   │
+│ │ [切换状态]                                                        │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+│ 系统自动切换：                                                          │
+│ └─────────────────────────────────────────────────────────────────────┐   │
+│ │ 状态变化提醒                                                        │   │
+│ │                                                                    │   │
+│ │ ✅ 李四开始执行任务，自动切换为【🟡 忙碌】                     │   │
+│ │                                                                    │   │
+│ │ ⏰ 李四已24小时无操作，自动切换为【🔴 离线】                   │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 2：发起人查看参与者状态                                          │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 参与者状态看板：                                                       │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 👥 参与者状态看板                                               │   │
+│ │                                                                    │   │
+│ │ 🟢 在线 (3人)                                                   │   │
+│ │ ├─ 李四 - 刚刚活跃 | 任务：1个 | 专长：Python, FastAPI      │   │
+│ │ ├─ 王五 - 10分钟前 | 任务：2个 | 专长：React, TypeScript   │   │
+│ │ └─ 赵六 - 30分钟前 | 任务：0个 | 专长：Node.js            │   │
+│ │                                                                    │   │
+│ │ 🟡 忙碌 (1人)                                                   │   │
+│ │ └─ 周八 - 进行中 | 任务：1个 | 专长：Go, Docker           │   │
+│ │                                                                    │   │
+│ │ 🔴 离线 (2人)                                                   │   │
+│ │ ├─ 吴九 - 2小时前 | 任务：0个 | 专长：Rust              │   │
+│ │ └─ 郑十 - 1天前 | 任务：0个 | 专长：Python             │   │
+│ │                                                                    │   │
+│ │ [查看详情]  [发起人邀请]                                          │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 3：发起人指定备用参与者                                         │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 指定备用参与者：                                                       │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 环节1：后端API开发                                               │   │
+│ │ 负责人：李四 (🟡 忙碌)                                         │   │
+│ │                                                                    │   │
+│ │ 指定备用参与者：                                                   │   │
+│ │ ┌─────────────────────────────────────────────────────────────┐  │   │
+│ │ │ 候选列表：                                                     │  │   │
+│ │ │ 🟢 王五 - 专长匹配 | 评分：4.8/5.0                      │  │   │
+│ │ │ 🟢 赵六 - 专长匹配 | 评分：4.5/5.0                      │  │   │
+│ │ │ 🔴 吴九 - 专长匹配 | 评分：4.6/5.0                      │  │   │
+│ │ └─────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ [添加备用]  [取消]                                              │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+│ 备用列表：                                                            │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 已选备用：                                                         │   │
+│ │ ├─ 王五 - 已确认备用 | 状态：🟢 在线                        │   │
+│ │ └─ 赵六 - 待确认 | 状态：🟢 在线                            │   │
+│ │                                                                    │   │
+│ │ 💡 备用参与者可在主负责人失联时接管任务                          │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+└────────────────────────────────────────────────────────────────────────────┘
+```
+
+---
+
+## 场景六：企业模式使用
 
 ### 场景描述
 发起人发布加密项目，参与者申请认领并获取密钥。
@@ -458,102 +553,94 @@
 
 ---
 
-## 场景六：企业模式使用
+## 场景七：备份接管与任务转移
 
 ### 场景描述
-企业CTO使用企业模式发布项目，员工使用Skill参与。
+参与者放弃任务或失联时，备用参与者接管任务。
 
 ### 流程
 
 ```
 ┌────────────────────────────────────────────────────────────────────────────┐
-│ 步骤 1：企业发布项目                                                  │
+│ 步骤 1：参与者放弃任务                                                │
 ├────────────────────────────────────────────────────────────────────────────┤
 │                                                                            │
-│ 企业项目表单：                                                         │
+│ 放弃任务申请：                                                        │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
-│ │ 项目名称：内部报表系统v2.0                                         │   │
-│ │ 可见性：[○公开 ●私有]                                            │   │
-│ │ 模式：[○社区模式 ●企业模式]                                      │   │
-│ │ 企业：TechCorp Inc.                                               │   │
-│ │                                                                │   │
-│ │ 总积分：5000积分                                                  │   │
-│ │                                                                │   │
-│ │ 环节：                                                           │   │
-│ │ ├─ 环节1：数据库设计 - 500积分                                   │   │
-│ │ ├─ 环节2：后端API开发 - 1500积分                                │   │
-│ │ ├─ 环节3：前端界面开发 - 1500积分                               │   │
-│ │ └─ 环节4：测试用例编写 - 500积分                                 │   │
-│ │                                                                │   │
-│ │ 加密：[ ] 开启加密                                                │   │
+│ │ 放弃任务：环节1 - 后端API开发                                    │   │
+│ │ 放弃原因：                                                       │   │
+│ │ ┌─────────────────────────────────────────────────────────────┐  │   │
+│ │ │ ○ 任务超出能力范围                                          │  │   │
+│ │ │ ○ 个人原因无法继续                                          │  │   │
+│ │ │ ○ 其他原因                                                  │  │   │
+│ │ └─────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ 备注：                                                          │   │
+│ │ [任务复杂度超出预期，需要更多时间...]                            │   │
+│ │                                                                    │   │
+│ │ ⚠️ 放弃任务会影响信誉分                                        │   │
+│ │                                                                    │   │
+│ │ [确认放弃]  [取消]                                              │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
                                     │
                                     ▼
 ┌────────────────────────────────────────────────────────────────────────────┐
-│ 步骤 2：企业员工使用Skill参与                                         │
+│ 步骤 2：发起人处理放弃                                               │
 ├────────────────────────────────────────────────────────────────────────────┤
 │                                                                            │
-│ 员工Alice（前端工程师）参与：                                          │
+│ 处理放弃请求：                                                        │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
-│ │ Alice的个人档案：                                                  │   │
-│ │                                                                │   │
-│ │ 专长标签：                                                        │   │
-│ │ 技术栈：React, TypeScript, Ant Design                            │   │
-│ │ 专业领域：前端开发, UI设计                                        │   │
-│ │ 工具/平台：Claude, GPT-4                                         │   │
-│ │                                                                │   │
-│ │ Skill配置：                                                       │   │
-│ │ ├─ 已配置：Claude + GPT-4                                      │   │
-│ │ ├─ 本月成本：¥23.50                                            │   │
-│ │ └─ 配额状态：正常                                                │   │
-│ │                                                                │   │
-│ │ 系统评分：4.8/5.0                                                │   │
-│ │ ├─ 完成率：95%                                                  │   │
-│ │ ├─ 质量分：4.8/5.0                                             │   │
-│ │ └─ 协作分：4.7/5.0                                             │   │
-│ │                                                                │   │
-│ │ 已参与项目：8个                                                  │   │
-│ │ 累计积分：4200积分                                                │   │
-│ └─────────────────────────────────────────────────────────────────────┘   │
-│                                                                            │
-│ Alice认领环节3（前端界面开发）：                                       │
-│ ┌─────────────────────────────────────────────────────────────────────┐   │
-│ │ 环节3：前端界面开发                                                │   │
-│ │ 积分：1500积分                                                    │   │
-│ │ 要求：React, TypeScript                                          │   │
-│ │                                                                │   │
-│ │ [申请认领]                                                        │   │
+│ │ 放弃请求：李四放弃环节1                                          │   │
+│ │ 原因：任务超出能力范围                                           │   │
+│ │                                                                    │   │
+│ │ 处理方式：                                                       │   │
+│ │ ├─ ⏪ 重新开放认领                                            │   │
+│ │ ├─ 👤 指定备用参与者接管                                        │   │
+│ │ └─ 🔒 关闭环节                                                │   │
+│ │                                                                    │   │
+│ │ 💡 李四信誉分 -1 (从4.7降至4.6)                               │   │
+│ │                                                                    │   │
+│ │ [确认处理]  [取消]                                              │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
                                     │
                                     ▼
 ┌────────────────────────────────────────────────────────────────────────────┐
-│ 步骤 3：Alice使用Skill完成前端开发                                     │
+│ 步骤 3：备用参与者接管                                               │
 ├────────────────────────────────────────────────────────────────────────────┤
 │                                                                            │
-│ Alice使用Skill调用Claude完成React组件开发：                            │
+│ 备用接管通知：                                                        │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
-│ │ 任务：环节3 - 前端界面开发                                         │   │
-│ │                                                                │   │
-│ │ AI执行：                                                         │   │
-│ │ ├─ 生成React组件代码                                             │   │
-│ │ ├─ 生成TypeScript类型定义                                        │   │
-│ │ ├─ 生成样式文件 (SCSS)                                           │   │
-│ │ └─ 生成单元测试                                                   │   │
-│ │                                                                │   │
-│ │ 消耗：                                                           │   │
-│ │ ├─ Tokens：35,000                                               │   │
-│ │ └─ 成本：¥0.105                                                 │   │
-│ │                                                                │   │
-│ │ 贡献提交：                                                       │   │
-│ │ ├─ 代码提交：12次                                                │   │
-│ │ ├─ 组件数：8个                                                   │   │
-│ │ └─ 测试用例：20个                                                │   │
-│ │                                                                │   │
-│ │ [确认提交]                                                       │   │
+│ │ 🔔 接管任务邀请                                                  │   │
+│ │                                                                    │   │
+│ │ 发起人张三邀请你接管任务：                                       │   │
+│ │ 环节：后端API开发                                               │   │
+│ │ 原负责人：李四 (已放弃)                                          │   │
+│ │ 进度：60%                                                       │   │
+│ │                                                                    │   │
+│ │ 项目信息：                                                       │   │
+│ │ ├─ 项目：AI代码审查工具                                         │   │
+│ │ ├─ 已完成：API框架 + 认证模块                                  │   │
+│ │ └─ 待完成：测试 + 文档                                         │   │
+│ │                                                                    │   │
+│ │ 💰 剩余预算：¥1,200                                           │   │
+│ │                                                                    │   │
+│ │ [确认接管]  [拒绝]                                              │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+│ 接管后：                                                            │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ ✅ 已接管任务                                                    │   │
+│ │                                                                    │   │
+│ │ 王五成为环节1新负责人                                            │   │
+│ │ 任务进度：60% → 同步中...                                      │   │
+│ │                                                                    │   │
+│ │ 💡 已获取项目密钥，可查看加密内容                               │   │
+│ │                                                                    │   │
+│ │ [查看任务详情]  [继续执行]                                      │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
