--- a/requirements/产品需求规格说明书_v0.5.md
+++ b/requirements/产品需求规格说明书_v0.5.md
@@ -187,6 +187,12 @@ config:
 | **项目加密** | 环节加密 | 选择哪些环节加密 |
 | | 资料加密 | 加密项目资料和交付件 |
 | | 密钥管理 | 发起人分发子密钥 |
+| **参与者状态** | 在线管理 | 主动标记在线/离线 |
+| | 活跃追踪 | 最近活跃时间显示 |
+| | 任务状态 | 当前任务数量展示 |
+| **备份机制** | 放弃任务 | 重新开放环节认领 |
+| | 指定备用 | 发起人指定备用参与者 |
+| | 任务接管 | 备用参与者接管任务 |
 
 ---
 
@@ -309,6 +315,145 @@ API调用成本：
 │ [查看详情]  [配置API]  [升级配额]                              │
 └─────────────────────────────────────────────────────────────────────┘
 ```
+
+---
+
+## 五、参与者在线状态管理
+
+### 5.1 在线状态定义
+
+**参与者状态**：
+| 状态 | 标识 | 触发条件 | 可见范围 |
+|------|------|----------|-----------|
+| **🟢 在线** | 用户主动标记 | 参与者点击"在线"按钮 | 发起人可见 |
+| **🟡 忙碌** | 正在执行任务 | 开始执行任务时自动切换 | 发起人可见 |
+| **🔴 离线** | 主动标记/自动 | 用户主动点击或超时24h自动 | - |
+
+**状态切换规则**：
+```
+参与者状态流转：
+    ┌─────────────────────────────────────────────────────┐
+    │                                                     │
+    │  离线 ──→ 在线 ──→ 忙碌 ──→ 离线                   │
+    │     │         │          │        │                  │
+    │     │         │          │        │                  │
+    │     └─────────┴──────────┴────────┘                  │
+    │              ↑            ↓                            │
+    │              │         完成任务                        │
+    │              │                                          │
+    │              └───── 超时24h自动                       │
+    │                                                     │
+    └─────────────────────────────────────────────────────┘
+```
+
+### 5.2 在线状态显示
+
+**参与者列表展示**：
+```
+发起人查看参与者状态：
+┌─────────────────────────────────────────────────────────────────────┐
+│ 参与者列表                                                        │
+├─────────────────────────────────────────────────────────────────────┤
+│                                                                   │
+│ 🟢 李四          最近活跃：刚刚          当前任务：1个           │
+│    专长：Python, FastAPI              评分：4.7/5.0            │
+│                                                                   │
+│ 🟡 王五          最近活跃：10分钟前      当前任务：2个           │
+│    专长：React, TypeScript            评分：4.8/5.0            │
+│                                                                   │
+│ 🔴 赵六          最近活跃：2小时前       当前任务：0个           │
+│    专长：Node.js, Docker             评分：4.5/5.0            │
+│                                                                   │
+│ 🔴 周七          最近活跃：1天前        当前任务：0个           │
+│    专长：Go, Kubernetes              评分：4.6/5.0            │
+│                                                                   │
+└─────────────────────────────────────────────────────────────────────┘
+```
+
+### 5.3 活跃追踪
+
+**活跃时间记录**：
+| 触发动作 | 记录时间 | 影响 |
+|----------|----------|------|
+| 登录平台 | 当前时间 | 更新最近活跃 |
+| 使用Skill | 当前时间 | 更新最近活跃 |
+| 提交贡献 | 当前时间 | 更新最近活跃 |
+| 标记离线 | 用户操作 | 状态切换 |
+| 无操作24h | 系统自动 | 标记离线 |
+
+---
+
+## 六、备份机制
+
+### 6.1 备份场景
+
+**备份触发场景**：
+| 场景 | 处理方式 | 发起人操作 |
+|------|----------|-----------|
+| 参与者放弃任务 | 环节重新开放认领 | 无需操作 |
+| 参与者失联(超时24h) | 环节重新开放认领 | 发起人可指定备用 |
+| 发起人主动替换 | 指定备用参与者接管 | 手动选择 |
+
+### 6.2 备用参与者机制
+
+**指定备用**：
+```yaml
+备用参与者配置:
+  # 项目级别备用（可选）
+  backup_participants:
+    - user_id: user_002
+      name: 王五
+      skills: [React, TypeScript]
+      state: online  # 在线状态
+    - user_id: user_003
+      name: 赵六
+      skills: [Node.js, Docker]
+      state: busy    # 忙碌状态
+
+  # 环节级别备用（可选）
+  milestones:
+    - name: 环节1
+      backup_participants: [user_002, user_003]
+```
+
+**备用接管流程**：
+```
+参与者失联
+     │
+     ▼
+发起人收到通知
+     │
+     ├── 放弃任务 → 重新开放认领
+     │
+     ▼
+选择备用参与者
+     │
+     ▼
+备用确认接管
+     │
+     ▼
+任务转移
+     │
+     ▼
+备用继续执行
+```
+
+### 6.3 任务放弃流程
+
+**参与者放弃任务**：
+```
+步骤1：参与者申请放弃
+步骤2：发起人确认
+步骤3：环节重新开放认领
+步骤4：新参与者认领
+```
+
+**放弃处理**：
+| 放弃原因 | 影响 | 处理 |
+|----------|------|------|
+| 任务超出能力 | 信誉分-1 | 重新开放认领 |
+| 个人原因 | 无惩罚 | 重新开放认领 |
+| 恶意放弃 | 信誉分-3 | 限制接单7天 |
 
 ---
 
