--- a/requirements/产品需求规格说明书_v0.3.md
+++ b/requirements/产品需求规格说明书_v0.3.md
@@ -178,6 +178,17 @@
 - **工作量估算**：基于历史数据估算工时
 - **任务拆解**：自动将需求拆解为子任务
 - **风险识别**：识别潜在风险和依赖
+- **智能标签推荐**：AI自动推荐标签和分类（**新增：借鉴Linear AI**）
+
+**智能标签系统**（v0.3 新增）：
+```yaml
+标签推荐:
+  - 基于需求描述的自动标签生成
+  - 技术栈自动识别标签
+  - 项目类型分类标签
+  - 复杂度评估标签
+  - 优先级建议标签
+```
 
 **解析流程**：
 ```
@@ -186,7 +197,12 @@
                         预算/工时估算
                               ↓
                         AI能力匹配推荐
+                              ↓
+                        智能标签推荐（新增）
 ```
+
+**灵感来源**：
+- Linear AI的智能Issue创建和摘要功能
 
 #### 3.1.3 需求匹配推荐
 
@@ -288,6 +304,33 @@ AI能力:
 
 ### 3.3 项目管理系统 (PM System)
 
+#### 3.3.0 Git集成功能（v0.3 新增，借鉴Backlog.md）
+
+**GitHub/GitLab集成**：
+```yaml
+Git集成:
+  功能:
+    - 代码仓库关联
+    - Pull Request自动创建
+    - Commit状态追踪
+    - Issue与PR联动
+    - CI/CD状态同步
+  
+  AI自动化:
+    - AI自动提交代码变更
+    - 任务状态与PR状态联动
+    - 自动生成Commit Message
+    - 合并冲突智能提示
+```
+
+**开发者工作流支持**：
+| 功能 | 描述 | 优先级 |
+|------|------|--------|
+| 仓库关联 | 项目关联Git仓库 | P0 |
+| PR自动创建 | 任务完成自动创建PR | P1 |
+| 状态同步 | 任务状态与Git状态同步 | P1 |
+| 代码审查 | GitHub Actions集成 | P2 |
+
 #### 3.3.1 项目生命周期
 
 ```
@@ -369,6 +412,22 @@ AI能力:
 ---
 
 ### 3.4 AI 雇员管理系统
+
+#### 3.4.0 AI Agent执行等级（v0.3 新增，借鉴Linear AI）
+
+**执行等级定义**：
+| 等级 | 名称 | 描述 | 权限 |
+|------|------|------|------|
+| L1 | Tab补全 | 简单代码补全、函数签名 | 低自主 |
+| L2 | Cmd+K | 生成代码片段，用户审核后应用 | 中自主 |
+| L3 | Agent模式 | 自主完成整个任务，自动提交 | 高自主 |
+| L4 | 全自动 | 自主规划、执行、测试、部署 | 最高自主 |
+
+**用户可控设置**：
+- 每个任务可设置AI执行等级
+- 敏感操作需要用户确认
+- 记录每个任务的执行等级
+- 统计AI自主使用情况
 
 #### 3.4.1 在岗确认系统
 
