feat: 补充发起人权限设计
**新增内容**：

**需求规格说明书**：
- 新增第三章：发起人权限设计
  - 权限概述：付费者拥有知情权和验收权
  - 执行中查看权限：Skill模板、模型选择、调用记录、成本统计
  - 验收权限：通过/拒绝/要求修改
  - 争议处理流程

**场景设计文档**：
- 新增场景四：发起人查看Skill与验收
  - 步骤1：执行中查看参与者Skill（模板、模型、调用记录）
  - 步骤2：参与者提交成果
  - 步骤3：发起人验收（质量检查、评分、反馈）
  - 步骤4：验收完成（结算、支付）
- 更新场景编号：1-10个场景
- 场景四现在是发起人查看Skill，场景五起是成本管理

**核心设计**：
- 发起人作为付费者，有权查看参与者使用的Skill详情
- 执行中可见：Skill模板、模型选择、AI调用记录、成本消耗
- 完成后可见：AI生成内容、人工审核记录、质量验收评分
- 验收权限：通过确认付款，拒绝需附原因

文件：
- requirements/产品需求规格说明书_v0.6.md (更新)
- scenarios/场景设计文档_v0.6.md (更新 +300行)

--- a/scenarios/场景设计文档_v0.6.md
+++ b/scenarios/场景设计文档_v0.6.md
@@ -228,11 +228,176 @@
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
-```
 
 ---
 
-## 场景四：Skill成本管理
+## 场景四：发起人查看Skill与验收
+
+### 场景描述
+发起人张三作为付费者，有权查看参与者李四使用的Skill详情，并在任务完成后进行验收。
+
+### 流程
+
+```
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 1：执行中查看参与者Skill                                         │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 发起人看板：                                                         │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 👤 发起人看板 - AI代码审查工具                                   │   │
+│ │                                                                    │   │
+│ │ 项目进度：                                                         │   │
+│ │ ├─ 环节1：李四 - 进行中 (60%)                                     │   │
+│ │ └─ 环节2：待开始                                                   │   │
+│ │                                                                    │   │
+│ │ 李四的执行详情：                                                  │   │
+│ │ ┌─────────────────────────────────────────────────────────────┐  │   │
+│ │ │ 🟡 忙碌 - 正在执行环节1                                       │  │   │
+│ │ │ 专长：Python, FastAPI | 评分：4.7/5.0                      │  │   │
+│ │ │ Skill等级：L3 | 成本控制：优秀                              │  │   │
+│ │ └─────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ [查看Skill详情]  [查看调用记录]  [查看成本]                     │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+│ 发起人查看Skill详情：                                                │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 🔍 李四使用的Skill详情                                           │   │
+│ │                                                                    │   │
+│ │ Skill名称：AI Project Worker v1.2                                │   │
+│ │                                                                    │   │
+│ │ 模型选择：                                                         │   │
+│ │ ├─ 已选：Claude Sonnet 4 (平衡方案)                              │   │
+│ │ ├─ 原因：任务复杂度中等，选择平衡方案                            │   │
+│ │ └─ 替代：DeepSeek (¥0.001/1K) - 简单任务可选                   │   │
+│ │                                                                    │   │
+│ │ Prompt模板：                                                       │   │
+│ │ ┌─────────────────────────────────────────────────────────────┐  │   │
+│ │ │ 你是一位专业的{{language}}开发者。                           │  │   │
+│ │ │ 任务：{{task_description}}                                  │  │   │
+│ │ │ 要求：                                                        │  │   │
+│ │ │ 1. 遵循{{coding_standards}}                                │  │   │
+│ │ │ 2. 包含完整的错误处理                                        │  │   │
+│ │ │ 3. 编写单元测试                                              │  │   │
+│ │ └─────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ AI调用记录：                                                       │   │
+│ │ ┌─────────────────────────────────────────────────────────────┐  │   │
+│ │ │ 次数 │ 时间        │ 模型        │ Tokens │ 成本    │ 任务    │  │   │
+│ │ ├──────┼─────────────┼─────────────┼────────┼─────────┼─────────┤  │   │
+│ │ │ 1次  │ 10:30     │ Claude     │ 15K   │ ¥0.045  │ 生成框架 │  │   │
+│ │ │ 2次  │ 11:15     │ Claude     │ 8K    │ ¥0.024  │ Bug修复  │  │   │
+│ │ │ 3次  │ 14:00     │ Claude     │ 12K   │ ¥0.036  │ 文档编写 │  │   │
+│ │ └─────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ 总成本：¥0.105 / 预算¥0.10 (105%) ⚠️                          │   │
+│ │                                                                    │   │
+│ │ [返回]                                                            │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 2：参与者提交成果                                                │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 提交通知：                                                            │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 📬 李四提交了环节1 - 后端API开发                                 │   │
+│ │                                                                    │   │
+│ │ 交付件：                                                         │   │
+│ │ ├─ app.py (3.2KB) - FastAPI主应用                             │   │
+│ │ ├─ models.py (1.8KB) - SQLAlchemy模型                        │   │
+│ │ ├─ test_auth.py (2.1KB) - 单元测试                            │   │
+│ │ └─ requirements.txt (0.2KB) - 依赖列表                        │   │
+│ │                                                                    │   │
+│ │ 执行统计：                                                         │   │
+│ │ ├─ AI调用：4次                                                  │   │
+│ │ ├─ Tokens：35,000                                               │   │
+│ │ ├─ 成本：¥0.105 (超预算5%)                                    │   │
+│ │ └─ 质量评分：4.6/5.0                                           │   │
+│ │                                                                    │   │
+│ │ [立即验收]  [查看详情]  [稍后处理]                             │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 3：发起人验收                                                    │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 发起人验收界面：                                                      │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ ✅ 验收 - 环节1：后端API开发                                     │   │
+│ │                                                                    │   │
+│ │ 交付件预览：                                                      │   │
+│ │ ┌─────────────────────────────────────────────────────────────┐  │   │
+│ │ │ 📄 app.py                                                 │  │   │
+│ │ │ ├─ 用户注册接口 POST /register                            │  │   │
+│ │ │ ├─ 用户登录接口 POST /login (JWT)                        │  │   │
+│ │ │ ├─ 密码重置接口 POST /password-reset                     │  │   │
+│ │ │ └─ Token刷新接口 POST /refresh                           │  │   │
+│ │ └─────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ 质量检查：                                                         │   │
+│ │ ┌─────────────────────────────────────────────────────────────┐  │   │
+│ │ │ 检查项          │ 状态    │ 评分    │ 说明              │  │   │
+│ │ ├────────────────┼─────────┼─────────┼────────────────────┤  │   │
+│ │ │ 功能完整性     │ ✅通过 │ 5/5    │ 所有接口正常      │  │   │
+│ │ │ 代码质量       │ ✅通过 │ 4.5/5   │ 符合PEP8         │  │   │
+│ │ │ 测试覆盖       │ ✅通过 │ 5/5    │ 覆盖率85%        │  │   │
+│ │ │ 文档完整性     │ ✅通过 │ 4/5    │ 缺少错误码说明   │  │   │
+│ │ │ 成本控制       │ ⚠️通过 │ 4/5    │ 超预算5%         │  │   │
+│ │ ├────────────────┼─────────┼─────────┼────────────────────┤  │   │
+│ │ │ 综合评分       │        │ 4.6/5   │ 验收通过          │  │   │
+│ │ └─────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ 发起人反馈：                                                       │   │
+│ │ ┌─────────────────────────────────────────────────────────────┐  │   │
+│ │ │ 整体评价：                                                     │  │   │
+│ │ │ "代码质量很好，功能完整。虽超预算5%，但考虑到              │  │   │
+│ │ │  完成度很高，接受本次交付。"                                 │  │   │
+│ │ └─────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ [通过验收]  [拒绝验收]  [要求修改]                             │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 4：验收完成                                                      │
+├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 验收结果：                                                            │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ ✅ 验收通过                                                        │   │
+│ │                                                                    │   │
+│ │ 结算详情：                                                         │   │
+│ │ ├─ 项目：AI代码审查工具                                         │   │
+│ │ ├─ 环节：后端API开发                                             │   │
+│ │ ├─ 负责人：李四                                                  │   │
+│ │ ├─ 获得分成：¥3,000 × 35% = ¥1,050                            │   │
+│ │ └─ 成本扣除：¥0.105 (参与者自付)                                 │   │
+│ │                                                                    │   │
+│ │ 发起人确认：                                                      │   │
+│ │ ├─ 已查看李四使用的Skill模板和模型选择                            │   │
+│ │ ├─ 已检查AI生成的代码质量和功能完整性                             │   │
+│ │ ├─ 已确认成本消耗明细                                            │   │
+│ │ └─ 验收通过，支付分成                                            │   │
+│ │                                                                    │   │
+│ │ 💰 支付成功 - ¥1,050 已转入李四账户                            │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└────────────────────────────────────────────────────────────────────────────┘
+
+
+---
+
+## 场景五：Skill成本管理
 
 ### 场景描述
 参与者查看和控制自己的API使用成本，实现成本效益最大化。
@@ -308,7 +473,7 @@
 
 ---
 
-## 场景五：参与者在线状态管理
+## 场景六：参与者在线状态管理
 
 ### 场景描述
 参与者主动维护自己的在线状态，发起人可查看参与者状态并指定备用参与者。
@@ -364,7 +529,7 @@
 
 ---
 
-## 场景六：企业模式使用
+## 场景七：企业模式使用
 
 ### 场景描述
 企业CTO使用企业模式发布项目，员工使用Skill参与，注意成本控制。
@@ -472,7 +637,7 @@
 
 ---
 
-## 场景七：备份接管与任务转移
+## 场景八：备份接管与任务转移
 
 ### 场景描述
 参与者放弃任务或失联时，备用参与者接管任务。
@@ -550,7 +715,7 @@
 
 ---
 
-## 场景八：分成结算
+## 场景九：分成结算
 
 ### 场景描述
 项目完成后，按贡献度和成本效益计算分成。
@@ -592,7 +757,7 @@
 
 ---
 
-## 场景九：性价比方案选择
+## 场景十：性价比方案选择
 
 ### 场景描述
 发起人发布项目时指定成本要求，参与者根据任务选择性价比方案。
