feat: 补充阶段付费分成机制
**新增内容**：

**需求规格说明书**：
- 新增第八章：分成与结算机制
  - 8.1 分成模式：阶段付费（验收后立即到账）
  - 8.2 分成计算：按环节预算×贡献比例
  - 8.3 结算规则：验收通过→立即结算（秒级）
  - 8.4 积分制：社区现金/企业积分，1积分=¥1
  - 8.5 成本结算：参与者自付API费，从分成中扣除
  - 8.6 争议处理：平台仲裁机制

**场景设计文档**：
- 更新场景三：验收完成后明确验收后秒到账
- 更新场景五：增加阶段付费流程图和分成计算示例
  - 项目总预算拆分为环节预算
  - 每个环节完成后按贡献比例分成
  - 备用接管时按进度比例分配分成
  - 强调验收后立即到账

**核心设计**：
- 阶段付费：每个环节完成后按贡献比例分成
- 结算时间：验收通过后立即到账（秒级）
- 结算方式：社区现金，企业积分
- 成本承担：参与者自付API费，从分成中扣除
- 争议处理：平台仲裁机制

用户确认：
- 付费时间点：验收后立即到账 ✅
- 积分制：保留 ✅

文件：
- requirements/产品需求规格说明书_v0.7.md (更新)
- scenarios/场景设计文档_v0.7.md (更新)

--- a/scenarios/场景设计文档_v0.7.md
+++ b/scenarios/场景设计文档_v0.7.md
@@ -211,7 +211,8 @@
 │ │ 李四获得分成：¥3,000 × 35% = ¥1,050                            │   │
 │ │ 李四API成本：¥0.099 (自付)                                        │   │
 │ │                                                                    │   │
-│ │ 💰 支付成功 - ¥1,050 已转入李四账户                            │   │
+│ │ 💰 支付成功 - ¥1,050 已转入李四账户 (验收后秒到账)            │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └────────────────────────────────────────────────────────────────────────────┘
@@ -258,14 +259,29 @@
 ## 场景五：备份与结算
 
 ### 场景描述
-参与者放弃任务时，备用参与者接管或重新开放认领。
+参与者放弃任务时，备用参与者接管或重新开放认领。每个环节完成后，按贡献比例分成，验收后立即到账。
 
 ### 流程
 
 ```
+分成机制：
 ┌────────────────────────────────────────────────────────────────────────────┐
-│ 场景 A：放弃任务 → 重新认领                                              │
-├────────────────────────────────────────────────────────────────────────────┤
+│                        阶段付费流程                                      │
+│                                                                            │
+│  项目：AI代码审查工具 总预算：¥10,000                                  │
+│       │                                                                   │
+│       ├── 环节1：¥3,000 → 李四35% → ¥1,050 (验收后立即到账)           │
+│       ├── 环节2：¥4,000 → 王五40% → ¥1,600 (验收后立即到账)          │
+│       └── 环节3：¥3,000 → 李四50% → ¥1,500 (验收后立即到账)           │
+│                                                                            │
+│  结算规则：                                                             │
+│  ├─ 验收通过 → 秒级到账                                                │
+│  ├─ 验收拒绝 → 修改后重交                                              │
+│  └─ 社区现金 / 企业积分                                                │
+└────────────────────────────────────────────────────────────────────────────┘
+```
+
+### ❌ 场景 A：放弃任务 → 重新认领
 │                                                                            │
 │ 李四放弃环节1（个人原因）：                                              │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
@@ -282,6 +298,18 @@
 ┌────────────────────────────────────────────────────────────────────────────┐
 │ 场景 B：指定备用接管                                                    │
 ├────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 接管后结算（阶段付费）：                                                │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 环节2 原预算：¥4,000                                               │   │
+│ │ 原负责人王五进度：50%                                               │   │
+│ │ 王五分成：¥4,000 × 40% × 50% = ¥800                              │   │
+│ │ 新负责人周八分成：¥4,000 × 60% × 50% = ¥1,200                    │   │
+│ │                                                                    │   │
+│ │ 结算规则：                                                         │   │
+│ │ ├─ 王五已做部分 → 按比例结算（验收后立即到账）                    │   │
+│ │ └─ 周八接管部分 → 完成后结算（验收后立即到账）                    │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 │ 王五接管任务：                                                          │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
