--- a/requirements/产品需求规格说明书_v0.7.md
+++ b/requirements/产品需求规格说明书_v0.7.md
@@ -580,6 +580,134 @@ backup_participants:
 
 ---
 
+## 八、分成与结算机制
+
+### 8.1 分成模式：阶段付费
+
+**核心原则**：验收后立即到账，按贡献比例分配
+
+```
+分成流程：
+┌─────────────────────────────────────────────────────────────────────────────┐
+│                           阶段付费流程                                    │
+│                                                                             │
+│  项目总预算                                                               │
+│      │                                                                     │
+│      ▼                                                                     │
+│  拆分为N个环节                                                           │
+│      │                                                                     │
+│      ▼                                                                     │
+│  参与者认领环节                                                          │
+│      │                                                                     │
+│      ▼                                                                     │
+│  执行任务 → 质量控制 → 提交成果                                           │
+│      │                                                                     │
+│      ▼                                                                     │
+│  发起人验收 ⭐                                                          │
+│      │                                                                     │
+│      ├── 验收通过 → 立即结算（验收后秒到账）                              │
+│      │                                                                     │
+│      └── 验收拒绝 → 需修改后重交                                          │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 8.2 分成计算
+
+**分成公式**：
+```
+参与者分成 = 环节预算 × 贡献比例
+
+示例：
+项目总预算：¥10,000
+环节1预算：¥3,000（30%）
+李四贡献比例：35%
+李四分成 = ¥3,000 × 35% = ¥1,050
+```
+
+**分成示例表**：
+```
+环节1（¥3,000）：
+├─ 李四：35% → ¥1,050
+├─ 王五：35% → ¥1,050
+└─ 赵六：30% → ¥900
+
+环节2（¥4,000）：
+├─ 王五：40% → ¥1,600
+└─ 周八：60% → ¥2,400
+
+环节3（¥3,000）：
+├─ 李四：50% → ¥1,500
+└─ 赵六：50% → ¥1,500
+
+总计：
+├─ 李四：¥1,050 + ¥1,500 = ¥2,550
+├─ 王五：¥1,050 + ¥1,600 = ¥2,650
+├─ 赵六：¥900 + ¥1,500 = ¥2,400
+└─ 周八：¥2,400
+```
+
+### 8.3 结算规则
+
+**结算时间**：
+| 场景 | 结算时间 |
+|------|----------|
+| 验收通过 | 立即到账（秒级） |
+| 验收拒绝 | 修改后重新提交，再次验收 |
+
+**结算方式**：
+| 模式 | 结算方式 |
+|------|----------|
+| 社区模式 | 现金（支付宝/微信） |
+| 企业模式 | 积分 |
+
+### 8.4 积分制（企业模式）
+
+**积分获取**：
+```
+参与者获得积分：
+├─ 完成环节 → 按贡献比例获得积分
+└─ 成本控制奖励 → 节省预算可获额外积分
+
+积分价值：
+├─ 1积分 = ¥1（固定价值）
+└─ 企业可自定义积分价值
+```
+
+**积分使用**：
+| 使用场景 | 说明 |
+|----------|------|
+| 兑换现金 | 1:1 兑换人民币 |
+| 兑换服务 | 兑换平台内的其他服务 |
+| 兑换商品 | 兑换实物商品（未来） |
+
+### 8.5 成本结算
+
+**成本承担**：
+| 角色 | 成本 | 结算方式 |
+|------|------|----------|
+| 参与者 | API调用费 | 自行承担，从分成中扣除 |
+| 发起人 | 项目预算 | 支付分成 |
+
+**示例**：
+```
+李四环节1分成：¥1,050
+李四API成本：¥0.099
+李四实际收入：¥1,050 - ¥0.099 = ¥1,049.901
+```
+
+### 8.6 争议处理
+
+**争议场景与处理**：
+| 场景 | 处理方式 |
+|------|----------|
+| 发起人拒绝验收 | 提供修改意见，参与者修改后重新提交 |
+| 参与者不服验收结果 | 发起申诉，平台仲裁 |
+| 成本争议 | 查看AI调用记录，核实实际消耗 |
+| 贡献度争议 | 查看Git提交记录，平台仲裁 |
+
+---
+
 ## 九、开发计划
 
 ### 9.1 开发周期
